# Sawmill

./: .gitignore  README.md  class_diagram.drawio  dockerfile  main.py  pyproject.toml
.github/workflows/: smartcut-ci.yml
api/: api_controller.py
core/: smart_cut_backend.py
domain/: cutting_job.py  report.py
integrations/: erp_adapter.py  sawmill_integration.py  scanner_adapter.py
interfaces/: i_cutting_optimizer.py  i_erp_integration.py  i_job_executor.py  i_job_status_provider.py  i_machine_integration.py  i_report_generator.py  i_repository.py  i_scanner_integration.py
optimization/: advanced_neural_optimizer.py  neural_network_optimizer.py
reports/: csv_report_generator.py  pdf_report_generator.py
repository/: postgres_cutting_repository.py
smartcut/: .flake8  dockerfile  main.py  requirements.txt
smartcut/.github/workflows/: smartcut-ci.yml
smartcut/api/: api_controller.py
smartcut/core/: smart_cut_backend.py
smartcut/domain/: cutting_job.py
smartcut/integrations/: scanner_adapter.py
smartcut/interfaces/: i_job_executor.py  i_repository.py  i_scanner_integration.py
smartcut/tests/: test_models.py
tests/: test_models.py
