[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartcut"
version = "1.0.0"
description = "SmartCut System for wood cutting optimization"
requires-python = ">=3.10"

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.11",
]
lint = [
    "flake8>=6.1",
    "pylint>=2.17",
    "black>=23.7",
    "mypy>=1.5",
]
dev = [
    "ipython>=8.14",
    "watchdog>=3.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
ignore_missing_imports = true
allow_untyped_decorators = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["api", "core", "domain", "integrations", "optimization", "repository", "reports"]

[tool.coverage.report]
fail_under = 70
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
]